--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -1,3 +1,8 @@
+# Copyright 2019 Keith Maxwell <keith.maxwell@gmail.com>
+#
+# SPDX-License-Identifier: Apache-2.0
+#
+# grub/grub.cfg
 insmod all_video
 insmod regexp
 for i in /*.cfg; do source $i; done
